[package]
name = "wordlers"
version = "0.2.1"
edition = "2021"
license-file = "../LICENSE"
exclude = ["*.txt", "*.bak"]
readme = "README.md"
description = "A program to solve/play word games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
colored = "2"
rand = "0.8.4"
